<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSkyBlue"
    tools:context="com.example.sh334379.hostelmanagement.RegistrationActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/TitleWidth"
        android:layout_height="@dimen/TitleHeight"
        android:layout_marginLeft="@dimen/CommonMargin"
        android:layout_marginRight="@dimen/CommonMargin"
        android:layout_marginTop="@dimen/CommonMargin"
        android:text="@string/guest_registration"
        android:layout_gravity="center"
        android:textSize="@dimen/TitleTextSize"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/CommonMargin"
        app:layout_constraintVertical_bias="0.044"
        android:layout_marginStart="@dimen/CommonMargin"
        android:layout_marginEnd="@dimen/CommonMargin" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/CommonMargin"
        android:layout_marginLeft="@dimen/CommonMargin"
        android:layout_marginRight="@dimen/CommonMargin"
        android:layout_marginTop="@dimen/CommonMargin"
        android:text="@string/user_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/tvTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <EditText
        android:inputType="text"
        android:id="@+id/etName"
        android:layout_width="@dimen/etWidth"
        android:layout_height="@dimen/etHeight"
        android:layout_marginBottom="@dimen/CommonMargin"
        android:layout_marginLeft="@dimen/CommonMargin"
        android:layout_marginRight="@dimen/CommonMargin"
        android:layout_marginTop="@dimen/CommonMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/CommonMargin"
        android:layout_marginLeft="@dimen/CommonMargin"
        android:layout_marginRight="@dimen/CommonMargin"
        android:layout_marginTop="@dimen/CommonMargin"
        android:text="@string/address"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/tvTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />
    <EditText
        android:inputType="textMultiLine"
        android:id="@+id/etAddress"
        android:layout_width="@dimen/etWidth"
        android:layout_height="@dimen/etAddress"
        android:layout_marginBottom="@dimen/CommonMargin"
        android:layout_marginLeft="@dimen/CommonMargin"
        android:layout_marginRight="@dimen/CommonMargin"
        android:layout_marginTop="@dimen/CommonMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <TextView
        android:id="@+id/tvDOJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/CommonMargin"
        android:layout_marginLeft="@dimen/CommonMargin"
        android:layout_marginRight="@dimen/CommonMargin"
        android:layout_marginTop="@dimen/CommonMargin"
        android:text="@string/dob"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/tvTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362" />
    <EditText
        android:inputType="text"
        android:id="@+id/etDOB"
        android:layout_width="@dimen/etWidth"
        android:layout_height="@dimen/etHeight"
        android:layout_marginBottom="@dimen/CommonMargin"
        android:layout_marginLeft="@dimen/CommonMargin"
        android:layout_marginRight="@dimen/CommonMargin"
        android:layout_marginTop="@dimen/CommonMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/tvCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/CommonMargin"
        android:layout_marginLeft="@dimen/CommonMargin"
        android:layout_marginRight="@dimen/CommonMargin"
        android:layout_marginTop="@dimen/CommonMargin"
        android:text="@string/company"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/tvTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447" />
    <EditText
        android:inputType="text"
        android:id="@+id/etCompany"
        android:layout_width="@dimen/etWidth"
        android:layout_height="@dimen/etHeight"
        android:layout_marginBottom="@dimen/CommonMargin"
        android:layout_marginLeft="@dimen/CommonMargin"
        android:layout_marginRight="@dimen/CommonMargin"
        android:layout_marginTop="@dimen/CommonMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456" />

    <TextView
        android:id="@+id/tvRoomNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/CommonMargin"
        android:layout_marginLeft="@dimen/CommonMargin"
        android:layout_marginRight="@dimen/CommonMargin"
        android:layout_marginTop="@dimen/CommonMargin"
        android:text="@string/room_no"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/tvTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534" />
    <EditText
        android:inputType="text"
        android:id="@+id/etRoomNo"
        android:layout_width="@dimen/etWidth"
        android:layout_height="@dimen/etHeight"
        android:layout_marginBottom="@dimen/CommonMargin"
        android:layout_marginLeft="@dimen/CommonMargin"
        android:layout_marginRight="@dimen/CommonMargin"
        android:layout_marginTop="@dimen/CommonMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <TextView
        android:id="@+id/tvSharing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/CommonMargin"
        android:layout_marginLeft="@dimen/CommonMargin"
        android:layout_marginRight="@dimen/CommonMargin"
        android:layout_marginTop="@dimen/CommonMargin"
        android:text="@string/sharing"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/tvTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619" />
    <EditText
        android:inputType="number"
        android:id="@+id/etSharing"
        android:layout_width="@dimen/etWidth"
        android:layout_height="@dimen/etHeight"
        android:layout_marginBottom="@dimen/CommonMargin"
        android:layout_marginLeft="@dimen/CommonMargin"
        android:layout_marginRight="@dimen/CommonMargin"
        android:layout_marginTop="@dimen/CommonMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631" />

    <TextView
        android:id="@+id/tvContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/CommonMargin"
        android:layout_marginLeft="@dimen/CommonMargin"
        android:layout_marginRight="@dimen/CommonMargin"
        android:layout_marginTop="@dimen/CommonMargin"
        android:text="@string/cotact"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/tvTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703" />
    <EditText
        android:inputType="phone"
        android:id="@+id/etContact"
        android:layout_width="@dimen/etWidth"
        android:layout_height="@dimen/etHeight"
        android:layout_marginBottom="@dimen/CommonMargin"
        android:layout_marginLeft="@dimen/CommonMargin"
        android:layout_marginRight="@dimen/CommonMargin"
        android:layout_marginTop="@dimen/CommonMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="@dimen/reg_btn_width"
        android:layout_height="@dimen/reg_btn_height"
        android:layout_marginBottom="@dimen/CommonMargin"
        android:layout_marginLeft="@dimen/CommonMargin"
        android:layout_marginRight="@dimen/CommonMargin"
        android:layout_marginTop="@dimen/CommonMargin"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />
</android.support.constraint.ConstraintLayout>
