<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sh334379.hostelmanagement.DetailedMonthlyPaymentInfoActivity"
    tools:ignore="GradleDependency">

    <TextView
        android:id="@+id/tvMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/tvTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintVertical_bias="0.014" />

    <TextView
        android:id="@+id/tvRent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintVertical_bias="0.137" />
    <EditText
        android:inputType="text"
        android:id="@+id/etRent"
        android:layout_width="@dimen/etWidth"
        android:layout_height="@dimen/etHeight"
        android:ems="10"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintVertical_bias="0.141" />

    <TextView
        android:id="@+id/tvDues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dues"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintVertical_bias="0.209" />
    <EditText
        android:inputType="text"
        android:id="@+id/etDues"
        android:layout_width="@dimen/etWidth"
        android:layout_height="@dimen/etHeight"
        android:ems="10"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintVertical_bias="0.215" />

    <TextView
        android:id="@+id/tvGrandTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grand_total"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintVertical_bias="0.284" />
    <EditText
        android:inputType="text"
        android:id="@+id/etGrandTotal"
        android:layout_width="@dimen/etWidth"
        android:layout_height="@dimen/etHeight"
        android:ems="10"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/tvRemarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remarks"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintVertical_bias="0.515" />
    <EditText
        android:inputType="textMultiLine"
        android:id="@+id/etRemarks"
        android:layout_width="@dimen/etWidth"
        android:layout_height="@dimen/etHeight"
        android:ems="10"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintVertical_bias="0.53" />

    <TextView
        android:id="@+id/tvTotalPaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_paid"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="3dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintVertical_bias="0.359"
        tools:ignore="RtlHardcoded" />
    <EditText
        android:inputType="text"
        android:id="@+id/etTotalPaid"
        android:layout_width="@dimen/etWidth"
        android:layout_height="@dimen/etHeight"
        android:ems="10"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/tvCurrentBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_balance"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintVertical_bias="0.436" />
    <EditText
        android:inputType="text"
        android:id="@+id/etCurrentBalance"
        android:layout_width="@dimen/etWidth"
        android:layout_height="@dimen/etHeight"
        android:ems="10"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintVertical_bias="0.449" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintVertical_bias="0.59" />
    <EditText
        android:inputType="date"
        android:id="@+id/etDate"
        android:layout_width="@dimen/etWidth"
        android:layout_height="@dimen/etHeight"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintVertical_bias="0.607" />

</android.support.constraint.ConstraintLayout>
